bugfix dark mode

--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -24,6 +24,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
+    .choices__item .choices__item--selectable,
     .choices__list--dropdown .choices__item,
     .choices__placeholder {
         color: var(--color-bg);
